--- a/main.css
+++ b/main.css
@@ -1,26 +1,29 @@
   #slider {
-    width: 80%;
-    margin-bottom: 24px;
-    margin-left: 150px;
-    margin-top: -42px;
-    
+    width: 84%;
+    /* margin-bottom: 46px !important; */
+    margin-left: 190px;
+    margin-top: -64px;
+
+        font-family: Roboto,Arial,sans-serif;
+    font-size: 11px;
+    font-weight: 400;
   }
 
    #rectangle {
     background-color: white;
-    width: 86%;
-    height: 48px;
-    margin-bottom: 0px;
-    margin-left: 106px;
-    margin-top: -45px;
+    width: 88%;
+    height: 44px;
+    /* margin-bottom: 10px; */
+    margin-left: 152px;
+    margin-top: -68px;
     position: absolute;
 
-border-radius: 4px 4px 0px 0px;
--moz-border-radius: 4px 4px 0px 0px;
--webkit-border-radius: 4px 4px 0px 0px;
-border: 0px solid #000000;
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
 
--webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
--moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   }
