kombinace heat mapy a markeru

--- a/app/components/map.component.html
+++ b/app/components/map.component.html
@@ -1,7 +1,1 @@
-<!--<div id="floating-panel">
-  <button (click)="toggleHeatmap()">Toggle Heatmap</button>
-  <button (click)="changeGradient()">Change gradient</button>
-  <button (click)="changeRadius()">Change radius</button>
-  <button (click)="changeOpacity()">Change opacity</button>
-</div>-->
-<div id="map"></div>
+<div id="{{mapId}}"></div>
