--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -5,6 +5,8 @@
   <div class="row">
     <map></map>
     <slider></slider>
+    <!--<side-menu></side-menu>-->
+    <statistics></statistics>
   </div>
 </div>
 <!--<test></test>-->
