--- a/app/components/menu.component.html
+++ b/app/components/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    <div class="navbar-header">
+    <!--<div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
         aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -9,21 +9,13 @@
             <span class="icon-bar"></span>
           </button>
       <a class="navbar-brand" href="#">Project name</a>
-    </div>
+    </div>-->
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown" dropdown>
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-          <a href="#" class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Čidla <span class="caret"></span></a>
-          <!--<ul class="dropdown-menu" dropdown-not-closable-zone>-->
+          <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Čidla <span class="caret"></span></a>
           <ul class="dropdown-menu" dropdown-not-closable-zone>
-            <li *ngFor="let payload of gps, let ndx = index" ><a href="#">{{payload.temp}}</a></li>
-            <!--<li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>-->
+            <li *ngFor="let sensor of sensors, let ndx = index" ><a (click)="onClick(sensor)">{{sensor.devEUI}}</a></li>
           </ul>
         </li>
       </ul>
