--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -5,9 +5,13 @@
     prumerZaTyden: {{prumerZaTyden}}<br>
     prumerZaMesic: {{prumerZaMesic}}-->
 
-<statis [statisType]="0"></statis>
-<statis [statisType]="1"></statis>
-<statis [statisType]="3"></statis>
+
+<tabs-statis></tabs-statis>
+<!--<statis  [statisType]="1"></statis>
+<div style="padding-top:130px">
+    <statis  [statisType]="3"></statis>
+</div>-->
+<!--<statis [statisType]="3"></statis>-->
 <!--<statis [statisType]="4"></statis>-->
 
 </div>
