--- a/main.css
+++ b/main.css
@@ -9,6 +9,17 @@
     font-weight: 400;
   }
 
+   #slider3 {
+    width: 300px;
+    /* margin-bottom: 46px !important; */
+    margin-left: 40px;
+    /*margin-top: -64px;*/
+
+    font-family: Roboto,Arial,sans-serif;
+    /*font-size: 11px;*/
+    /*font-weight: 400;*/
+  }
+
    #rectangle {
     background-color: white;
     width: 88%;
@@ -32,8 +43,8 @@
 #statis {
     font-family: Roboto,Arial,sans-serif; 
     /*background-color: white;*/
-    width: 350px;
-    height: 150;
+    width: 280px;
+    height: 150px;
      padding: 10px; 
      margin-top: 10px;
     /*margin-right: 10px;*/
@@ -53,8 +64,8 @@
   #statistics {
     font-family: Roboto,Arial,sans-serif; 
     background-color: white;
-    width: 350px;
-    height: 500;
+    width:  680px;;
+    height: 300px;
      margin-bottom: 10px; 
     margin-right: 10px;
     /*margin-top: -23%;
