--- a/app/components/statistics/tabs.statis.component.html
+++ b/app/components/statistics/tabs.statis.component.html
@@ -39,8 +39,21 @@
  
   <!--<p><i>Bootstrap 4 doesn't have justified classes</i></p>-->
   <tabset [justified]="true">
-    <tab heading="Hodinový"><statis  [statisType]="0"></statis></tab>
-    <tab heading="Denní 6-22"><statis  [statisType]="1"></statis></tab>
+<!--
+    <tab *ngFor="let tabz of tabs"
+         [heading]="tabz.title"
+         [active]="tabz.active"
+         (select)="tabz.active = true"
+         (deselect)="tabz.active = false"
+         [disabled]="tabz.disabled"
+         [removable]="tabz.removable"
+         (removed)="removeTabHandler(tabz)">
+      {{tabz?.content}}
+    </tab>-->
+
+ 
+    <tab heading="Hodinový"><statis  [statisType]="1"></statis></tab>
+    <tab heading="Denní 6-22" (select)="onClick($event)"><statis  [statisType]="1"></statis></tab>
     <tab heading="Denní 18-22"><statis  [statisType]="2"></statis></tab>
     <tab heading="Noční 22-6"><statis  [statisType]="3"></statis></tab>
     <tab heading="Denní 24h"><statis  [statisType]="4"></statis></tab>
