--- a/app/components/statistics/statis.component.css
+++ b/app/components/statistics/statis.component.css
@@ -1,10 +1,4 @@
- #slider3 {
-    width: 300px;
-    /* margin-bottom: 46px !important; */
+ .slider3 {
     margin-left: 40px;
-    /*margin-top: -64px;*/
-
-    font-family: Roboto,Arial,sans-serif;
-    /*font-size: 11px;*/
-    /*font-weight: 400;*/
+    margin-top: 10px;
   }
