--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,15 +1,22 @@
 <div id="statis">
+    <table-statis #myTable [data]="barChartData" [labels]="barChartLabels"></table-statis>
     <!--<base-chart *ngIf="barChartData && barChartData.length != 0" #myChart class="chart"-->
     <base-chart #myChart class="chart"
             [data]="barChartData"
             [labels]="barChartLabels"
             [options]="barChartOptions"
             [legend]="barChartLegend"
-            [chartType]="barChartType">
+            [chartType]="barChartType" 
+            width="540" 
+            height="200" 
+            style="padding-top: 10px;">
             <!--(chartHover)="chartHovered($event)"
             (chartClick)="chartClicked($event)">-->
     </base-chart>
 
-    <button  class="btn btn-default" (click)="clearChart()">clear</button>
-    <input id="{{statisId}}" style="display: none"/>
+    <!--<button  class="btn btn-default" (click)="refreshSlider()">clear</button>-->
+    <!--<button  class="btn btn-default" (click)="disEnaSlider()">dis</button>-->
+    <div class="slider3" >
+        <input id="{{statisId}}" style="display: none; width: 510px;"/>
+    </div>
 </div>
