--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+.info-window{
+    font-family: 'Roboto','sans-serif';
+    /*background-color: #f45;*/
+  }
+  
+
   #slider {
     width: 84%;
     /* margin-bottom: 46px !important; */
@@ -66,8 +72,9 @@
     background-color: white;
     width:  590px;;
     height: 400px;
-     margin-bottom: 10px; 
+    margin-bottom: 10px; 
     margin-right: 10px;
+    margin-top: 70px;
     /*margin-top: -23%;
     position: absolute;*/
 
