uprava pro zobrazeni v IE, pridana zakl. legenda

--- a/app/components/map/base.map.legend.component.html
+++ b/app/components/map/base.map.legend.component.html
@@ -3,7 +3,7 @@
        
         <!--<div class="smallBox" [style.background]="legend.color" ></div>-->
         <span class="smallBox" [style.background]="legend.color" ></span>
-         {{legend.valueText}}
-        <!--<span>{{legend.valueText}}</span>-->
+         <!--{{legend.valueText}}-->
+        <span>{{legend.valueText}}</span>
     </span>
 </div>
