--- a/app/components/map/map.legend.component.html
+++ b/app/components/map/map.legend.component.html
@@ -1,5 +1,5 @@
 <div id="legend-main">
-    <div id="LegendTitle" class="panelSubHeader panel_title">Legenda</div>
+    <div id="LegendTitle" class="LegendTitle">Legenda</div>
     <div *ngIf="showRuzyneLegend">
         <div id="RuzyneLegend" class="RuzyneLegend" style="display: block;">
             <table cellpadding="0" cellspacing="0" width="95%" class="RuzyneTable" id="RuzyneTable">
