--- a/app/components/menu.component.html
+++ b/app/components/menu.component.html
@@ -16,19 +16,12 @@
           <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Čidla <span class="caret"></span></a>
           <ul class="dropdown-menu" dropdown-not-closable-zone>
             <li *ngFor="let sensor of sensors, let ndx = index">
-              <a *ngIf="isSensorOnMap(sensor)" (click)="onClick(sensor)">
-                <strong>{{sensor.devEUI}}</strong>
-              </a>
-               <a *ngIf="!isSensorOnMap(sensor)" (click)="onClick(sensor)">
-                {{sensor.devEUI}}
-              </a>
+              <a (click)="onClick(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)" [class.red-sensor]="isSensorSelected(sensor)">{{sensor.devEUI}}</a>              
             </li>
           </ul>
         </li>
       </ul>
-    </div>
-     <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
+       <!--<ul class="nav navbar-nav">
         <li class="dropdown" dropdown>
           <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Čidla Animace<span class="caret"></span></a>
           <ul class="dropdown-menu" dropdown-not-closable-zone>
@@ -42,7 +35,7 @@
             </li>
           </ul>
         </li>
-      </ul>
+      </ul>-->
     </div>
   </div>
 </nav>
