--- a/app/components/statistics/table.statis.component.html
+++ b/app/components/statistics/table.statis.component.html
@@ -1,6 +1,7 @@
 <div style="overflow-y: scroll; height:150px;">
+	{{devEUI}}
 <table class="statis-table table table-striped">
-  <li *ngFor="let sensor of sensors, let ndx = index" ><a (click)="onClick(sensor)">{{sensor.devEUI}}</a></li>
+  <!--<li *ngFor="let sensor of sensors, let ndx = index" ><a (click)="onClick(sensor)">{{sensor.devEUI}}</a></li>-->
 	<thead>
 		<tr>
 			 <th>datum</th>
@@ -8,6 +9,7 @@
 		</tr>
 	</thead>
 	<tbody>
+		
     <tr *ngFor="let label of labels, let ndx = index">
       <th>{{label}}</th>
 			<td>{{data[ndx]}}</td>
