--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -1,5 +1,4 @@
- #baseMapLegend {
-
+ #baseMapLegendHorizontal {
     background-color: white;
     /*width: 88%;
     height: 44px;
@@ -17,11 +16,35 @@
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   }
-.legendText{
-  margin: 5px;
+.legendText {
+  margin: 4px;
   font-family: Roboto,Arial,sans-serif;
+}
 
+ #baseMapLegendVertical {
+    /*background-color: white;*/
+    /*width: 88%;
+    height: 44px;
+    /* margin-bottom: 10px; */
+    /*margin-left: 152px;*/
+    padding: 0px;
+    /*position: absolute;*/
 
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  }
+
+.legendText {
+  margin: 0px;
+  width: 45px;
+  font-family: Roboto,Arial,sans-serif;
+  text-align: center;
 }
 
 .smallBox {
