--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+/*#slider .slider-track-high, #slider .slider-track-high {
+	background: green;
+}*/
+
+
+
+
 .info-window{
     font-family: 'Roboto','sans-serif';
     /*background-color: #f45;*/
