--- a/app/components/map/tabs.map.legend.component.css
+++ b/app/components/map/tabs.map.legend.component.css
@@ -1,3 +1,29 @@
   tab {
     background-color: white;
+    padding: 5px;
+
+      border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+
+    /*-webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);*/
+    /*margin: 5px;*/
+  }
+
+  #tabs-map-legend {
+    /*height: 400px;*/
+    background-color: white;
+    margin-top: 70px;
+
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   }
