--- a/app/components/map.component.html
+++ b/app/components/map.component.html
@@ -1,3 +1,3 @@
 <div id="{{mapId}}"></div>
 <tabs-map-legend></tabs-map-legend>
-<base-map-legend></base-map-legend>
+<base-map-legend showVertical='true'></base-map-legend>
