--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -1,58 +1,17 @@
- #baseMapLegendHorizontal {
-    background-color: white;
-    /*width: 88%;
-    height: 44px;
-    /* margin-bottom: 10px; */
-    /*margin-left: 152px;*/
-    padding: 5px;
-    /*position: absolute;*/
-
-    border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    border: 0px solid #000000;
-
-    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  }
-.legendText {
-  margin: 4px;
-  font-family: Roboto,Arial,sans-serif;
-}
-
- #baseMapLegendVertical {
-    /*background-color: white;*/
-    /*width: 88%;
-    height: 44px;
-    /* margin-bottom: 10px; */
-    /*margin-left: 152px;*/
-    padding: 0px;
-    /*position: absolute;*/
-
-    border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    border: 0px solid #000000;
-
-    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  }
-
 .legendText {
   margin: 0px;
   width: 45px;
   font-family: Roboto,Arial,sans-serif;
   text-align: center;
+  font-weight: bold;
 }
 
 .smallBox {
   /*float: left;*/
   width: 20px;
   height: 20px;
-  /*margin: 5px;*/
   border: 1px solid rgba(0, 0, 0, .2);
   padding-left: 20px;
   margin-right: 5px;
+  font-weight: bold;
 }
