--- a/app/components/menu.component.html
+++ b/app/components/menu.component.html
@@ -1,22 +1,13 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    <!--<div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-        aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-      <a class="navbar-brand" href="#">Project name</a>
-    </div>-->
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown" dropdown>
           <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Čidla <span class="caret"></span></a>
           <ul class="dropdown-menu" dropdown-not-closable-zone>
             <li *ngFor="let sensor of sensors, let ndx = index">
-              <a (click)="onClick(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)" [class.red-sensor]="isSensorSelected(sensor)">{{sensor.devEUI}}</a>              
+              <!--tooltip="{{sensor.devEUI}}"-->
+              <a   data-placement="left" (click)="onClick(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)" [class.gray-sensor]="!isSensorOnMap(sensor)" [class.red-sensor]="isSensorSelected(sensor)">{{sensor.name}}</a>              
             </li>
           </ul>
         </li>
