--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,5 +1,5 @@
 <div id="statis">
-    <table-statis #myTable [devEUI]="devEUI" [data]="barChartData[0].data" [labels]="barChartLabels"></table-statis>
+    <table-statis #myTable [devEUI]="devEUI" [data]="barChartData[0].data" [labels]="barTableLabels"></table-statis>
     <!--<base-chart *ngIf="barChartData && barChartData.length != 0" #myChart class="chart"-->
     <base-chart #myChart class="chart"
             [datasets]="barChartData"
