--- a/app/components/statistics/tabs.statis.component.html
+++ b/app/components/statistics/tabs.statis.component.html
@@ -52,9 +52,7 @@
       {{tabz?.content}}
     </tab>-->
 
-    <tab heading="Hodinový" (select)="statis1.refreshSlider($event)">
-      <statis #statis1 [statisType]="0"></statis>
-    </tab>
+    <tab heading="Hodinový" (select)="statis1.refreshSlider($event)"><statis #statis1 [statisType]="0"></statis></tab>
     <tab heading="Denní 6-22" (select)="statis2.refreshSlider($event)"><statis #statis2 [statisType]="1"></statis></tab>
     <tab heading="Denní 18-22" (select)="statis3.refreshSlider($event)"><statis #statis3 [statisType]="2"></statis></tab>
     <tab heading="Noční 22-6" (select)="statis4.refreshSlider($event)"><statis #statis4 [statisType]="3"></statis></tab>
