uprava zobrazeni a komponent

--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -9,8 +9,8 @@
             [chartType]="barChartType" 
             width="540" 
             height="200" 
-            style="padding-top: 10px;">
-            <!--(chartHover)="chartHovered($event)"
+            style="padding-top: 10px; padding-right: 10px;">
+            <!--(chartHover)="chartHovered($event)"   
             (chartClick)="chartClicked($event)">-->
     </base-chart>
 
