--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<!--<div class="container-fluid">
   <menu></menu>
-</div>
+</div>-->
 <div class="container-fluid">
   <div class="row">
     <map></map>
