--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -1,17 +1,17 @@
 .legendText {
   margin: 0px;
+  margin-left: 10px;
+  padding: 2px;
   width: 45px;
   font-family: Roboto,Arial,sans-serif;
   text-align: center;
   font-weight: bold;
-}
+  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
 
-.smallBox {
-  /*float: left;*/
-  width: 20px;
-  height: 20px;
-  border: 1px solid rgba(0, 0, 0, .2);
-  padding-left: 20px;
-  margin-right: 5px;
-  font-weight: bold;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border: 0px solid #000000;
 }
