--- a/app/components/map/tabs.map.legend.component.html
+++ b/app/components/map/tabs.map.legend.component.html
@@ -1,5 +1,5 @@
 <div  id="tabs-map-legend">
-  <!-- http://valor-software.com/ng2-bootstrap/#/tabs -->
+  <!-- http://valor-software.com/ng2-bootstrap/#/tabs  [vertical]="true" type="pills"-->
   <tabset [justified]="false">
 
    <tab heading="Ruzyně">
@@ -18,9 +18,9 @@
       <input type="checkbox" [(ngModel)]="overlays[11].checked" value={{overlays[11].value}} (ngModelChange)="onChkboxClick(overlays[11])">{{overlays[11].text}}<br>
       <input type="checkbox" [(ngModel)]="overlays[12].checked" value={{overlays[12].value}} (ngModelChange)="onChkboxClick(overlays[12])">{{overlays[12].text}}<br>
     </tab>
-    <tab heading="Praha-Brno-Ostrava">
+    <!--<tab heading="Praha-Brno-Ostrava">
       <input type="checkbox" [(ngModel)]="overlays[10].checked" value={{overlays[10].value}} (ngModelChange)="onChkboxClick(overlays[10])">{{overlays[10].text}}<br>
-    </tab>
+    </tab>-->
     <tab heading="Železnice">
       <input type="checkbox" [(ngModel)]="overlays[0].checked" value={{overlays[0].value}} (ngModelChange)="onChkboxClick(overlays[0])">{{overlays[0].text}}<br>
       <input type="checkbox" [(ngModel)]="overlays[1].checked" value={{overlays[1].value}} (ngModelChange)="onChkboxClick(overlays[1])">{{overlays[1].text}}<br>
