--- a/app/components/statistics/tabs.statis.component.css
+++ b/app/components/statistics/tabs.statis.component.css
@@ -8,3 +8,10 @@
     /*font-size: 11px;*/
     /*font-weight: 400;*/
   }
+
+/*#tabs{
+  border: solid #ddd;
+    border-width: 0px 1px 1px 1px;
+    height: 450px;
+}*/
+  
