--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);*/
   }
 
-  #statistics {
+  /*#statistics {
     font-family: Roboto,Arial,sans-serif; 
     background-color: white;
     width:  590px;;
@@ -91,15 +91,15 @@
     /*margin-top: -23%;
     position: absolute;*/
 
-    border-radius: 4px 4px 4px 4px;
+    /*border-radius: 4px 4px 4px 4px;
     -moz-border-radius: 4px 4px 4px 4px;
     -webkit-border-radius: 4px 4px 4px 4px;
     border: 0px solid #000000;
 
     -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  }
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);*/
+  /*}*/
 
   #tabs-map-legend {
     font-size: 10px;
