--- a/app/components/statistics/tabs.statis.component.html
+++ b/app/components/statistics/tabs.statis.component.html
@@ -58,7 +58,7 @@
     <tab heading="Noční 22-6" (select)="statis4.refreshSlider($event)"><statis #statis4 [statisType]="3"></statis></tab>
     <tab heading="Denní 24h" (select)="statis5.refreshSlider($event)"><statis #statis5 [statisType]="4"></statis></tab>
     <tab heading="Týdenní" (select)="statis6.refreshSlider($event)"><statis #statis6 [statisType]="5"></statis></tab>
-    <tab heading="Měsiční" (select)="statis7.refreshSlider($event)"><statis #statis7 [statisType]="6"></statis></tab>
+    <tab heading="Měsíční" (select)="statis7.refreshSlider($event)"><statis #statis7 [statisType]="6"></statis></tab>
   </tabset>
 
 </div>
