--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -2,10 +2,50 @@
   <menu></menu>
 </div>-->
 <div class="container-fluid">
-  <div class="row">
-    <map></map>
-    <slider></slider>
-    <statistics></statistics>
-  </div>
+	<div class="row">
+		<map></map>
+		<slider></slider>
+		<statistics></statistics>
+	</div>
 </div>
+<!--
+<p *showItStandard="['iphone','ipad']">I'll show you if I'm a iPhone or ipad device.</p>
+<p *isIphone>I'll show you if I'm a iPhone device.</p>
+<p *isChrome>I'll show you if I'm a chrome browser.</p>-->
+
+<!--<p *isSmartTv>I'll show you if I'm a smartTv device.</p>
+<p *isDesktop>I'll show you if I'm a desktop device.</p>
+<p *isTablet>I'll show you if I'm a tablet device.</p>
+<p *isMobile>I'll show you if I'm a mobile device.</p>
+
+<p *isIphone>I'll show you if I'm a iPhone device.</p>
+<p *isIpad>I'll show you if I'm a iPad device.</p>
+<p *isAndroidMobile>I'll show you if I'm a android mobile device.</p>
+<p *isAndroidTablet>I'll show you if I'm a android tablet device.</p>
+<p *isWindowsPhone>I'll show you if I'm a windows phone mobile device.</p>
+
+<p *xl>I'll show you if I'm a xl screen size.</p>
+<p *lg>I'll show you if I'm a lg screen size.</p>
+<p *md>I'll show you if I'm a md screen size.</p>
+<p *sm>I'll show you if I'm a sm screen size.</p>
+<p *xs>I'll show you if I'm a xs screen size.</p>
+
+<p *isChrome>I'll show you if I'm a Chrome Browser.</p>
+<p *isFirefox>I'll show you if I'm a Firefox Browser.</p>
+<p *isSafari>I'll show you if I'm a Safari Browser.</p>
+<p *isOpera>I'll show you if I'm a Opera Browser.</p>
+<p *isIE>I'll show you if I'm a Internet Explorer Browser.</p>
+<p *isIE9>I'll show you if I'm a Internet Explorer 9.</p>
+<p *isIE10>I'll show you if I'm a Internet Explorer 10.</p>
+<p *isIE11>I'll show you if I'm a Internet Explorer 11.</p>
+<p *isIE12>I'll show you if I'm a Internet Explorer 12.</p>
+
+<p *is1xPixel>I'll show you if I'm a 1x screen.</p>
+<p *isRetina>I'll show you if I'm a retina screen.</p>
+<p *is4k>I'll show you if I'm a 4k screen.</p>
+
+  <p *isPortrait>I'll show you if I'm a portrait state.</p>
+       <p *isLandscape>I'll show you if I'm a landscape state.</p>-->
+
+<!--<userAgentInfo (info)="thisUserAgent($event)"></userAgentInfo>-->
 <!--<test></test>-->
