--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -1,10 +1,18 @@
-  /*.collapse.in{
-      background-color: red
-  }
-  .collapse {
-  background-color: green
-}*/
+.navbar {
+  margin:10px;
+}
 
+.bold-sensor {
+  font-weight: bold;
+}
+
+.red-sensor {
+  color: red !important;
+}
+
+.gray-sensor{
+   color: gray;
+}
 #combo{
   /*width:  490px;*/
       padding-top: 0px;
@@ -39,8 +47,8 @@
   #statistics   {
     font-family: Roboto,Arial,sans-serif; 
     background-color: white;
-    width:  590px;;
-    height: 407px;
+    width:  590px;
+    height: 407px !important;
     margin-right: 10px;
 
     /*border: solid #ddd;*/
