--- a/app/components/map/tabs.map.legend.component.css
+++ b/app/components/map/tabs.map.legend.component.css
@@ -14,9 +14,10 @@
   }
 
   #tabs-map-legend {
-    /*height: 400px;*/
+    z-index: 1 !important;
     background-color: white;
     margin-top: 24px;
+    margin-left: 10px;
 
     border-radius: 4px 4px 4px 4px;
     -moz-border-radius: 4px 4px 4px 4px;
@@ -27,3 +28,8 @@
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   }
+
+   #overlayGroup {
+        font-family: Roboto,Arial,sans-serif;
+            font-size: 11px;
+   }
