--- a/app/components/map/tabs.map.legend.component.html
+++ b/app/components/map/tabs.map.legend.component.html
@@ -1,6 +1,6 @@
-<div  id="tabs-map-legend">
+<div id="tabs-map-legend">
   <!-- http://valor-software.com/ng2-bootstrap/#/tabs  [vertical]="true" type="pills"-->
-  <tabset [justified]="false">
+  <!--<tabset [justified]="false">
 
    <tab heading="Ruzyně">
       <input type="checkbox" [(ngModel)]="overlays[17].checked" value={{overlays[17].value}} (ngModelChange)="onChkboxClick(overlays[17])">{{overlays[17].text}}<br>
@@ -18,9 +18,9 @@
       <input type="checkbox" [(ngModel)]="overlays[11].checked" value={{overlays[11].value}} (ngModelChange)="onChkboxClick(overlays[11])">{{overlays[11].text}}<br>
       <input type="checkbox" [(ngModel)]="overlays[12].checked" value={{overlays[12].value}} (ngModelChange)="onChkboxClick(overlays[12])">{{overlays[12].text}}<br>
     </tab>
-    <!--<tab heading="Praha-Brno-Ostrava">
+    <tab heading="Praha-Brno-Ostrava">
       <input type="checkbox" [(ngModel)]="overlays[10].checked" value={{overlays[10].value}} (ngModelChange)="onChkboxClick(overlays[10])">{{overlays[10].text}}<br>
-    </tab>-->
+    </tab>
     <tab heading="Železnice">
       <input type="checkbox" [(ngModel)]="overlays[0].checked" value={{overlays[0].value}} (ngModelChange)="onChkboxClick(overlays[0])">{{overlays[0].text}}<br>
       <input type="checkbox" [(ngModel)]="overlays[1].checked" value={{overlays[1].value}} (ngModelChange)="onChkboxClick(overlays[1])">{{overlays[1].text}}<br>
@@ -35,5 +35,21 @@
       <input type="checkbox" [(ngModel)]="overlays[8].checked" value={{overlays[8].value}} (ngModelChange)="onChkboxClick(overlays[8])">{{overlays[8].text}}<br>
       <input type="checkbox" [(ngModel)]="overlays[9].checked" value={{overlays[9].value}} (ngModelChange)="onChkboxClick(overlays[9])">{{overlays[9].text}}<br>
     </tab>
-  </tabset>
+  </tabset>-->
+
+
+  <ul class="nav navbar-nav">
+    <li class="dropdown" dropdown>
+      <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Vyberte vsrtvy <span class="glyphicon glyphicon-menu-down" ></span></a>
+      <ul id="overlayGroup" class="dropdown-menu" dropdown-not-closable-zone >
+        <!--dropdown-not-closable-zone-->
+        <li *ngFor="let overlayGroup of overlayGroups, let ndx = index" class="overlayGroup">
+          {{overlayGroup.name}}
+          <a *ngFor="let overlay of overlayGroup.overlays">
+            1<input type="checkbox" [(ngModel)]="overlay.checked " value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay) ">{{overlay.text}}
+          </a>
+        </li>
+      </ul>
+    </li>
+  </ul>
 </div>
