--- a/app/components/slider.component.css
+++ b/app/components/slider.component.css
@@ -1,1 +1,11 @@
+#slider {
+    width: 84%;
+    /* margin-bottom: 46px !important; */
+    margin-left: 190px;
+    margin-top: -64px;
+
+    font-family: Roboto,Arial,sans-serif;
+    font-size: 11px;
+    font-weight: 400;
+}
 
