--- a/main.css
+++ b/main.css
@@ -17,16 +17,16 @@
   }
   
 
-  #slider {
+  /*#slider {
     width: 84%;
-    /* margin-bottom: 46px !important; */
+
     margin-left: 190px;
     margin-top: -64px;
 
     font-family: Roboto,Arial,sans-serif;
     font-size: 11px;
     font-weight: 400;
-  }
+  }*/
 
    #slider3 {
     width: 300px;
@@ -101,7 +101,7 @@
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);*/
   /*}*/
 
-  #tabs-map-legend {
+  /*#tabs-map-legend {
     font-size: 10px;
     font-family: Roboto,Arial,sans-serif;
     background-color: white;
@@ -115,4 +115,4 @@
     -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  }
+  }*/
