--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,7 +1,7 @@
 <div id="statis">
     <table-statis #myTable [devEUI]="devEUI" [data]="barChartData[0].data" [labels]="barTableLabels"></table-statis>
     <!--<base-chart *ngIf="barChartData && barChartData.length != 0" #myChart class="chart"-->
-    <canvas baseChart #myChart class="chart"
+    <base-chart #myChart class="chart"
             [datasets]="barChartData"
             [labels]="barChartLabels"
             [options]="barChartOptions"
@@ -12,7 +12,7 @@
             style="padding-top: 10px; padding-right: 10px;">
             <!--(chartHover)="chartHovered($event)"   
             (chartClick)="chartClicked($event)">-->
-    </canvas>
+    </base-chart>
 
     <!--<button  class="btn btn-default" (click)="refreshSlider()">clear</button>-->
     <!--<button  class="btn btn-default" (click)="disEnaSlider()">dis</button>-->
