--- a/app/components/map/tabs.map.legend.component.css
+++ b/app/components/map/tabs.map.legend.component.css
@@ -1,35 +1,69 @@
-  tab {
-    background-color: white;
-    padding: 5px;
+#tabs-map-legend {
+  z-index: 1 !important;
+  background-color: white;
+  margin-top: 24px;
+  margin-left: 10px;
 
-      border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    border: 0px solid #000000;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border: 0px solid #000000;
 
-    /*-webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);*/
-    /*margin: 5px;*/
-  }
+  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+}
 
-  #tabs-map-legend {
-    z-index: 1 !important;
-    background-color: white;
-    margin-top: 24px;
-    margin-left: 10px;
+.overlayGroup {
+  font-family: Roboto,Arial,sans-serif;
+  font-size: 11px;
+  opacity: .94;
+  padding-bottom: 5px;
+}
 
-    border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    border: 0px solid #000000;
+ul {
+  list-style-type: none;
+  padding-left: 0px;
+}
 
-    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  }
+.position { 
+  float: left;
+  width: 20px;
+}
 
-   #overlayGroup {
-        font-family: Roboto,Arial,sans-serif;
-            font-size: 11px;
-   }
+.layerChBox {
+  display: inline;
+}
+
+span.layerHadder {
+  font-weight: 600;
+  font-size: larger;
+  margin-left: 7px;
+}
+
+span.position {
+  text-align: center;
+  position: relative;
+  top: 2px;
+  height: 12.5px;
+}
+
+span.layerText {
+  margin-left: 5px;
+  text-align: center;
+  position: relative;
+  top: -4px;
+}
+
+span.layerSpanBox {
+  position: relative;
+  top: -1px;
+}
+
+.dropdown-menu>li>a {
+  padding: 0px;
+}
+
+.groupItem {
+  height: 18px;
+}
