--- a/app/components/map/tabs.map.legend.component.html
+++ b/app/components/map/tabs.map.legend.component.html
@@ -1,52 +1,20 @@
 <div id="tabs-map-legend">
-  <!-- http://valor-software.com/ng2-bootstrap/#/tabs  [vertical]="true" type="pills"-->
-  <!--<tabset [justified]="false">
-
-   <tab heading="Ruzyně">
-      <input type="checkbox" [(ngModel)]="overlays[17].checked" value={{overlays[17].value}} (ngModelChange)="onChkboxClick(overlays[17])">{{overlays[17].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[18].checked" value={{overlays[18].value}} (ngModelChange)="onChkboxClick(overlays[18])">{{overlays[18].text}}<br>
-    </tab>
-    <tab heading="Praha">
-      <input type="checkbox" [(ngModel)]="overlays[15].checked" value={{overlays[15].value}} (ngModelChange)="onChkboxClick(overlays[15])">{{overlays[15].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[16].checked" value={{overlays[16].value}} (ngModelChange)="onChkboxClick(overlays[16])">{{overlays[16].text}}<br>
-    </tab>
-    <tab heading="Brno"> 
-      <input type="checkbox" [(ngModel)]="overlays[13].checked" value={{overlays[13].value}} (ngModelChange)="onChkboxClick(overlays[13])">{{overlays[13].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[14].checked" value={{overlays[14].value}} (ngModelChange)="onChkboxClick(overlays[14])">{{overlays[14].text}}<br>
-    </tab>
-    <tab heading="Ostrava"> 
-      <input type="checkbox" [(ngModel)]="overlays[11].checked" value={{overlays[11].value}} (ngModelChange)="onChkboxClick(overlays[11])">{{overlays[11].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[12].checked" value={{overlays[12].value}} (ngModelChange)="onChkboxClick(overlays[12])">{{overlays[12].text}}<br>
-    </tab>
-    <tab heading="Praha-Brno-Ostrava">
-      <input type="checkbox" [(ngModel)]="overlays[10].checked" value={{overlays[10].value}} (ngModelChange)="onChkboxClick(overlays[10])">{{overlays[10].text}}<br>
-    </tab>
-    <tab heading="Železnice">
-      <input type="checkbox" [(ngModel)]="overlays[0].checked" value={{overlays[0].value}} (ngModelChange)="onChkboxClick(overlays[0])">{{overlays[0].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[1].checked" value={{overlays[1].value}} (ngModelChange)="onChkboxClick(overlays[1])">{{overlays[1].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[2].checked" value={{overlays[2].value}} (ngModelChange)="onChkboxClick(overlays[2])">{{overlays[2].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[3].checked" value={{overlays[3].value}} (ngModelChange)="onChkboxClick(overlays[3])">{{overlays[3].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[4].checked" value={{overlays[4].value}} (ngModelChange)="onChkboxClick(overlays[4])">{{overlays[4].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[5].checked" value={{overlays[5].value}} (ngModelChange)="onChkboxClick(overlays[5])">{{overlays[5].text}}<br>
-    </tab>
-    <tab heading="Silnice">
-      <input type="checkbox" [(ngModel)]="overlays[6].checked" value={{overlays[6].value}} (ngModelChange)="onChkboxClick(overlays[6])">{{overlays[6].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[7].checked" value={{overlays[7].value}} (ngModelChange)="onChkboxClick(overlays[7])">{{overlays[7].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[8].checked" value={{overlays[8].value}} (ngModelChange)="onChkboxClick(overlays[8])">{{overlays[8].text}}<br>
-      <input type="checkbox" [(ngModel)]="overlays[9].checked" value={{overlays[9].value}} (ngModelChange)="onChkboxClick(overlays[9])">{{overlays[9].text}}<br>
-    </tab>
-  </tabset>-->
-
-
   <ul class="nav navbar-nav">
     <li class="dropdown" dropdown>
-      <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Vyberte vsrtvy <span class="glyphicon glyphicon-menu-down" ></span></a>
-      <ul id="overlayGroup" class="dropdown-menu" dropdown-not-closable-zone >
+      <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Výběr mapových vrstev<span class="glyphicon glyphicon-menu-down"></span></a>
+      <ul id="overlayGroup" class="dropdown-menu" dropdown-not-closable-zone>
         <!--dropdown-not-closable-zone-->
         <li *ngFor="let overlayGroup of overlayGroups, let ndx = index" class="overlayGroup">
-          {{overlayGroup.name}}
-          <a *ngFor="let overlay of overlayGroup.overlays">
-            1<input type="checkbox" [(ngModel)]="overlay.checked " value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay) ">{{overlay.text}}
+          <span class="layerHadder">{{overlayGroup.name}}</span>
+          <a *ngFor="let overlay of overlayGroup.overlays" class="groupItem" tooltip="Pořadí vrstvy, výběr vrstvy, jméno vrstvy" tooltipPlacement="top" tooltipPopupDelay="1000">
+            <span class="groupItemSpan">      
+              <span class="position" *ngIf="overlay.position>0">{{overlay.position}}</span>
+              <span class="position" *ngIf!="overlay.position>0">&nbsp; &nbsp;</span>
+              <span class="layerSpanBox">
+                <input type="checkbox" class="layerChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)">
+              </span>
+              <span class="layerText">{{overlay.text}}</span>
+            </span>
           </a>
         </li>
       </ul>
