--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
 .tooltip-layer-component{
    width: 200px;
 }
-  /*#slider {
+  #slider {
     width: 84%;
 
     margin-left: 190px;
@@ -26,7 +26,7 @@
     font-family: Roboto,Arial,sans-serif;
     font-size: 11px;
     font-weight: 400;
-  }*/
+  }
 
    #slider3 {
     width: 300px;
