--- a/app/components/slider.component.html
+++ b/app/components/slider.component.html
@@ -1,2 +1,3 @@
-<div id="rectangle"></div>
+<div id="rectangle" *hideItBrowser="['ie']"></div>
+<div id="rectangleIE" *showItBrowser="['ie']"></div>
 <input id="{{sliderId}}"/>
