--- a/app/components/map/tabs.map.legend.component.css
+++ b/app/components/map/tabs.map.legend.component.css
@@ -12,6 +12,8 @@
   -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+
+  /*width: 9.5%;*/
 }
 
 .overlayGroup {
@@ -20,6 +22,14 @@
   opacity: .94;
   padding-bottom: 5px;
 }
+
+/*#tabs-map-legend > ul > li > a {
+ width: 9%;
+}
+
+#tabs-map-legend > ul > li{
+  width: 9%;
+}*/
 
 ul {
   list-style-type: none;
@@ -31,11 +41,20 @@ ul {
   width: 20px;
 }
 
+.positionIE { 
+  float: left;
+  width: 20px;
+}
+
 .layerChBox {
   display: inline;
 }
 
-span.layerHadder {
+.layerChBoxIE {
+  margin-top: 3px !important;
+}
+
+span.layerHeader {
   font-weight: 600;
   font-size: larger;
   margin-left: 7px;
@@ -44,8 +63,15 @@ span.layerHadder {
 span.position {
   text-align: center;
   position: relative;
-  top: 2px;
+  margin-top: 1.5px;
   height: 12.5px;
+}
+
+span.positionIE {
+  text-align: center;
+  position: relative;
+  height: 12.5px;
+  margin-top: 1.2px; 
 }
 
 span.layerText {
@@ -53,6 +79,13 @@ span.layerText {
   text-align: center;
   position: relative;
   top: -4px;
+}
+
+span.layerTextIE {
+  margin-left: 5px;
+  text-align: center;
+  position: relative;
+  top: -3px;
 }
 
 span.layerSpanBox {
