--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@
 .tooltip-layer-component{
    width: 200px;
 }
+
   #slider {
     width: 84%;
 
@@ -45,6 +46,25 @@
     height: 44px;
     /* margin-bottom: 10px; */
     margin-left: 152px;
+    margin-top: -68px;
+    position: absolute;
+
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  }
+
+  #rectangleIE {
+    background-color: white;
+    width: 90%;
+    height: 52px;
+    /* margin-bottom: 10px; */
+    margin-left: 133px;
     margin-top: -68px;
     position: absolute;
 
