uprava shared service a uklid

--- a/app/components/map/base.map.legend.component.html
+++ b/app/components/map/base.map.legend.component.html
@@ -1,4 +1,4 @@
-<div id="baseMapLegend">
+<div id="baseMapLegendId">
     <!--Horizontal-->
     <div *ngIf="!showVertical">
         <span class="legendText" *ngFor="let legend of legends">  
