--- a/app/components/map/tabs.map.legend.component.html
+++ b/app/components/map/tabs.map.legend.component.html
@@ -1,4 +1,4 @@
-<div id="tabs-map-legend">
+<div id="overlaysMenuId">
   <ul class="nav navbar-nav">
     <li class="dropdown" dropdown>
       <a class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Výběr mapových vrstev<span class="glyphicon glyphicon-menu-down"></span></a>
