--- a/app/components/map.component.html
+++ b/app/components/map.component.html
@@ -1,4 +1,4 @@
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
 <div id="{{mapId}}"></div>
 <base-map-legend showVertical='true'></base-map-legend>
-<tabs-map-legend></tabs-map-legend>
+<overlays-menu></overlays-menu>
