--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -1,10 +1,10 @@
-<div id="statistics2">
+<div id="statisticsId">
     <div>
         <div id="buttons">
             <div id="combo">
                 <ul class="nav navbar-nav">
                     <li class="dropdown" dropdown>
-                        <a *ngIf="selectedSensor == undefined" class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Vyberte čidlo <span class="glyphicon glyphicon-menu-down" ></span></a>
+                        <a *ngIf="selectedSensor == undefined" class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Vyberte čidlo <span class="glyphicon glyphicon-menu-down" ></span></a>
                         <a *ngIf="selectedSensor != undefined" class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{selectedSensor.name}} <span class="glyphicon glyphicon-menu-down"></span></a>
                         <ul class="dropdown-menu" > <!--dropdown-not-closable-zone-->
                             <li *ngFor="let sensor of sensors, let ndx = index">
