--- a/app/components/slider.component.html
+++ b/app/components/slider.component.html
@@ -1,3 +1,8 @@
-<div id="rectangle" *hideItBrowser="['ie']"></div>
-<div id="rectangleIE" *showItBrowser="['ie']"></div>
-<input id="{{sliderId}}"/>
+<div id="rectangle3" >
+	<div id="rectangle2" >
+        <div id="rectangle" >
+		    <input id="{{sliderId}}" />
+        </div>
+	</div>
+</div>
+<!--<div id="rectangleIE" *hideItBrowser="['ie']" *showItBrowser="['ie']"></div>-->
