--- a/app/components/slider.component.css
+++ b/app/components/slider.component.css
@@ -1,11 +1,31 @@
 #slider {
-    width: 84%;
-    /* margin-bottom: 46px !important; */
-    margin-left: 190px;
-    margin-top: -64px;
-
+    width: 100%;
     font-family: Roboto,Arial,sans-serif;
     font-size: 11px;
     font-weight: 400;
 }
+ #rectangle3 {
+    position: relative;
+    width:100%;
+    padding-right: 49px;
+    padding-left: 120px;
+    margin-top: -66px;
+  }
+  #rectangle2 {
+    padding-right: 36px;
+    padding-left: 36px;
+    padding-top: 2px;
+    width:100%;
+    background-color: white;
+    height: 43px;
+    margin-bottom: 7px;
 
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  }
