--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
    width: 200px;
 }
 
-  #slider {
+  /*#slider {
     width: 84%;
 
     margin-left: 190px;
@@ -27,24 +27,22 @@
     font-family: Roboto,Arial,sans-serif;
     font-size: 11px;
     font-weight: 400;
-  }
+  }*/
 
-   #slider3 {
+   /*#slider3 {
     width: 300px;
-    /* margin-bottom: 46px !important; */
+
     margin-left: 40px;
-    /*margin-top: -64px;*/
+
 
     font-family: Roboto,Arial,sans-serif;
-    /*font-size: 11px;*/
-    /*font-weight: 400;*/
-  }
 
-   #rectangle {
+  }*/
+
+   /*#rectangle {
     background-color: white;
     width: 88%;
     height: 44px;
-    /* margin-bottom: 10px; */
     margin-left: 152px;
     margin-top: -68px;
     position: absolute;
@@ -57,13 +55,12 @@
     -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  }
+  }*/
 
-  #rectangleIE {
+  /*#rectangleIE {
     background-color: white;
     width: 90%;
     height: 52px;
-    /* margin-bottom: 10px; */
     margin-left: 133px;
     margin-top: -68px;
     position: absolute;
@@ -76,7 +73,7 @@
     -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  }
+  }*/
 
 
 #statis {
