search box a komponenta vrstev dany do jende komponenty, pridana logo komponenta

--- a/app/components/map.component.html
+++ b/app/components/map.component.html
@@ -1,4 +1,3 @@
 <div id="{{mapId}}"></div>
-<search></search>
+<overlays-search>
 <base-map-legend showVertical='true'></base-map-legend>
-<overlays-menu></overlays-menu>
