--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -1,17 +1,17 @@
 #overlaysMenuId {
   z-index: 1 !important;
   background-color: white;
-  margin-top: 24px;
+  margin-top: 50px;
   margin-left: 10px;
 
-  border-radius: 4px 4px 4px 4px;
-  -moz-border-radius: 4px 4px 4px 4px;
-  -webkit-border-radius: 4px 4px 4px 4px;
+  border-radius: 4px 0px 0px 4px;
+  -moz-border-radius: 4px 0px 0px 4px;
+  -webkit-border-radius: 4px 0px 0px 4px;
   border: 0px solid #000000;
 
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  /*-webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
-  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);*/
 }
 
 .overlayGroup {
