--- a/app/components/map/search.component.css
+++ b/app/components/map/search.component.css
@@ -6,22 +6,26 @@
     -moz-box-sizing: border-box;
     height: 32px;
     outline: none;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    border-radius: 0px 4px 4px 0px;
+    -moz-border-radius: 0px 4px 4px 0px;
+    -webkit-border-radius: 0px 4px 4px 0px;
 }
 
 #pac-input {
     background-color: #fff;
     font-family: Roboto;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 300;
-    margin-left: 12px;
     padding: 0 11px 0 13px;
     text-overflow: ellipsis;
-    width: 300px;
+    width: 255px;
+    margin-left: 48px;
+    margin-top: -38px;
+    height: 38px;
 }
 
 #pac-input:focus {
-    border-color: #4d90fe;
+    /*border-color: darkgray;*/
 }
 
 .pac-container {
@@ -41,5 +45,5 @@
 }
 
 #target {
-    width: 345px;
+    width: 250px;
 }
