--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,1 +1,1 @@
-<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+<input id="pac-input" class="controls" type="text" placeholder="Vyhledat místo">
