uprava vzhledu loga, search boxu a komponenty vrstev

--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -1,3 +1,9 @@
-<logo></logo>
-<search></search>
-<overlays-menu></overlays-menu>
+<div id="overlaysSearchId">
+    <logo></logo>
+    <div class="overlaysSearch">
+        <overlays-menu></overlays-menu>
+        <div class="separator">
+            <search></search>    
+        </div>
+    </div>
+</div>
