--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -5,6 +5,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<map></map>
+		<overlays-search></overlays-search>
 		<slider></slider>
 		<statistics></statistics>
 	</div>
