--- a/app/components/map/logo.component.css
+++ b/app/components/map/logo.component.css
@@ -1,8 +1,24 @@
 .logoImage {
-    height: 27px;
+    z-index: 2 !important;
+    height: 22px;
     position: relative;
-    top: -575px;
+    top: 24px;
     left: 11px;
-    opacity: 0.8;
+    /*opacity: 0.95;*/
+
+    border-radius: 6px 6px 0px 0px;
+    -moz-border-radius: 6px 6px 0px 0px;
+    -webkit-border-radius: 6px 6px 0px 0px;
+    border: 0px solid #000000;
+
+    -webkit-box-shadow: 0px 0px 10px 4px white;
+    -moz-box-shadow: 0px 0px 10px 4px white;
+    box-shadow: 0px 0px 10px 4px white; 
+
+    background-color: white;
 }
+
+/*.okhome {
+
+}*/
 
