--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -9,7 +9,10 @@
 		<slider></slider>
 		<statistics></statistics>
 	</div>
+	<!--<canvas id="myChart2" width="400" height="400"></canvas>-->
+
 </div>
+
 <!--
 <p *showItStandard="['iphone','ipad']">I'll show you if I'm a iPhone or ipad device.</p>
 <p *isIphone>I'll show you if I'm a iPhone device.</p>
