--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -4,7 +4,7 @@
             <div id="combo">
                 <ul class="nav navbar-nav">
                     <li class="dropdown" dropdown>
-                        <a *ngIf="selectedSensor == undefined" class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Vyberte čidlo <span class="glyphicon glyphicon-menu-down" ></span></a>
+                        <a *ngIf="selectedSensor == undefined" class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" tooltip="Vybráním čidla se zobrazí jeho statistiky" tooltipPopupDelay="1500" tooltipPlacement="left">Vyberte čidlo<span class="glyphicon glyphicon-menu-down" ></span></a>
                         <a *ngIf="selectedSensor != undefined" class=" dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{selectedSensor.name}} <span class="glyphicon glyphicon-menu-down"></span></a>
                         <ul class="dropdown-menu" > <!--dropdown-not-closable-zone-->
                             <li *ngFor="let sensor of sensors, let ndx = index">
@@ -16,8 +16,8 @@
                     </li>
                 </ul>
             </div>
-            <button *ngIf="isHidden" type="button" class="btn btn-primary statisButton" (click)="isHidden = false">  <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> </button>
-            <button *ngIf="!isHidden" type="button" class="btn btn-default statisButton" (click)="isHidden = true">  <span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span> </button>
+            <button *ngIf="isHidden" type="button" class="btn btn-primary statisButton" (click)="isHidden = false" tooltip="Rozbalit statistiky" tooltipPopupDelay="1500" tooltipPlacement="left"> <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> </button>
+            <button *ngIf="!isHidden" type="button" class="btn btn-default statisButton" (click)="isHidden = true" tooltip="Sbalit statistiky" tooltipPopupDelay="1500" tooltipPlacement="left"> <span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span> </button>
         </div>
         <div  id="statistics" [collapse]="isHidden" > <!--  [collapse]="isHidden"  [hidden]="isHidden" -->
             <tabs-statis></tabs-statis>
