kulate rohy u search boxu

--- a/app/components/map/overlays.search.component.css
+++ b/app/components/map/overlays.search.component.css
@@ -20,6 +20,13 @@
   z-index: 1 !important;
 }
 
+#overlaysSearchId > div {
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border: 0px solid #000000;
+}
+
 .separator {
   border-right: 1px lightgray;
   border-left: 0px;
