--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,1 +1,1 @@
-<input id="pac-input" class="controls" type="text" placeholder="Vyhledat místo" tooltip="Pole pro vyhledávání místa" tooltipPopupDelay="1500" tooltipPlacement="right" tooltipClass="tooltip-search">
+<input id="pac-input" class="controls" type="text" placeholder="Vyhledat místo">
